    - Fixed bug; when dragging a file into JabRef and asking to move it to the file
      directory, warning will now be given if the destination file already exists. Patch
      by Alastair Mailer.
    - When dragging a file into JabRef and asking to copy or move it to the file directory,
      it is now possible to rename to an arbitrary name. Patch by Alastair Mailer.
    - Added "review" field to BibTeXML export.
    - Added Reset button to entry fetchers. Patch by Dennis Hartrampf and Ines Moosdorf.
    - Changed Microsoft Office XML export so "number" rather than "issue" is exported
      as <b:Issue>, which conforms with import format. 
    - Added confirmation dialog that allows saving without backup in cases when
      backup creation fails.
    - Fixed bug 2938562: using the move/rename feature on a file link could give an
      absolute link even if the file was put below the main file directory. 
    - Fixed bug 2931293: error generating key with [authorsAlpha] for short names.
    - When checking for external modifications, file size is now checked in addition
      to the time stamp.
    - Fixed handling of maximised state when shutting down and starting up JabRef.
      Patch by Igor L. Chernyavsky.
    - Fixed bug that prevented correct handling of DOS short file names. Patch
      by Igor L. Chernyavsky.
    - Added support for KOI8_R character set.
    - Removed DocumentPrinter class, using standard API functions instead. Patch by
      Tony Mancill.
    - Removed HightlightFilter class, using standard API functions instead. Patch by
      Tony Mancill.
    - Changed keyboard shortcut for IEEXplorer search to Alt-F8.
    - Disabled JStor search, which doesn't work due to API changes.
    - External file type manager now removes "." prefix in file type extension if the user
      has typed it that way.
    - Preview panel now defaults to preview layout 1 instead of 2. Switched default layouts.