@@ -96,14 +96,14 @@
 			value="Fetch Entries from Medline." />
 	</extension>
 
-	<!--<extension id="JSTORFetcher" plugin-id="net.sf.jabref.core"
+	<extension id="JSTORFetcher" plugin-id="net.sf.jabref.core"
 		point-id="EntryFetcher">
 		<parameter id="entryFetcher"
-			value="net.sf.jabref.imports.JSTORFetcher" />
+			value="net.sf.jabref.imports.JSTORFetcher2" />
 		<parameter id="name" value="JSTOR Entry Fetcher" />
 		<parameter id="description"
 			value="Fetch Entries from JSTOR." />
-	</extension>-->
+	</extension>
 
     <!-- To extend JabRef with an Layout Formatters use the following extension point -->
 	<extension-point id="LayoutFormatter">
